--- a/app/views/organizations/subscriptions/_pricing.html.erb
+++ b/app/views/organizations/subscriptions/_pricing.html.erb
@@ -42,7 +42,7 @@
 		<% end %>
 	</div>
 
-	<div class="text-center text-gray-400">
+	<div class="text-center text-gray-400 font-medium text-sm">
 		<%= t(".cancel_security") %>
 	</div>
 <% end %>
