--- a/app/views/shared/_sidebar_2_cols.html.erb
+++ b/app/views/shared/_sidebar_2_cols.html.erb
@@ -14,7 +14,7 @@
           <%= inline_svg_tag "svg/rocket-launch.svg", class: "size-6" %>
         <% end %>
         <div class="flex flex-col items-center space-y-1">
-          <% current_user.organizations.each do |organization| %>
+          <% Current.organizations.each do |organization| %>
             <%= active_link_to organization_path(organization, redirect_to: organization_dashboard_path(organization)), title: organization.name, class_active: "bg-red-400", class: "flex items-center space-x-2 text-sm rounded-md border-4 border-transparent hover:border-red-400 hover:bg-red-400" do %>
               <%= organization_avatar(organization) %>
             <% end %>
