--- a/lib/templates/rails/credentials/credentials.yml.tt
+++ b/lib/templates/rails/credentials/credentials.yml.tt
@@ -1,3 +1,6 @@
+# Used as the base secret for all MessageVerifiers in Rails, including the one protecting cookies.
+secret_key_base: <%= secret_key_base %>
+
 stripe:
   private_key: sk_
   public_key: pk_
