--- a/app/views/shared/_sidebar_toggle.html.erb
+++ b/app/views/shared/_sidebar_toggle.html.erb
@@ -1,4 +1,4 @@
-<button data-action="layout-switcher#toggleLayout" class="btn btn-transparent btn-sm" aria-label="Toggle sidebar layout">
+<button data-action="layout-switcher#toggleLayout" class="btn btn-ghost btn-sm" aria-label="Toggle sidebar layout">
 	<% if cookies[:sidebar_layout] == "two_column" %>
 		<span class="sr-only">Switch to one column layout</span>
 		<%= inline_svg_tag "svg/ellipsis-vertical.svg", class: "size-4" %>
