--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer class="p-4 text-center border-t space-y-2">
   <div>
-    <%= active_link_to "Terms", terms_path, class_active: "bg-gray-200", class: "btn btn-transparent" %>
-    <%= active_link_to "Privacy", privacy_path, class_active: "bg-gray-200", class: "btn btn-transparent" %>
+    <%= active_link_to "Terms", terms_path, class_active: "bg-gray-200", class: "btn btn-ghost" %>
+    <%= active_link_to "Privacy", privacy_path, class_active: "bg-gray-200", class: "btn btn-ghost" %>
   </div>
 
   <div>
