--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -18,7 +18,7 @@
       <%= link_to root_path, class: "no-underline" do %>
         <%= image_tag "logo.png", class: "size-8" %>
       <% end %>
-      <%= active_link_to "Pricing", pricing_path, class_active: "bg-gray-200", class: "btn btn-transparent" %>
+      <%= active_link_to "Pricing", pricing_path, class_active: "bg-gray-200", class: "btn btn-ghost" %>
     <% end %>
   </div>
 
@@ -32,13 +32,13 @@
           <%= inline_svg_tag "svg/chevron-down.svg", class: "w-4 h-4 stroke-2 transition-transform duration-200 group-open:rotate-180" %>
         </summary>
         <div class="absolute right-0 mt-1 bg-gray-100 border rounded-lg p-1 space-y-1">
-          <%= active_link_to t("shared.navigation.edit_profile"), edit_user_registration_path, class_active: "bg-gray-200", class: "btn btn-transparent block w-full text-left" %>
-          <%= button_to t("shared.navigation.logout"), destroy_user_session_path, method: :delete, data: { turbo_confirm: t("shared.actions.confirm") }, class: "btn btn-transparent block w-full text-left" %>
+          <%= active_link_to t("shared.navigation.edit_profile"), edit_user_registration_path, class_active: "bg-gray-200", class: "btn btn-ghost block w-full text-left" %>
+          <%= button_to t("shared.navigation.logout"), destroy_user_session_path, method: :delete, data: { turbo_confirm: t("shared.actions.confirm") }, class: "btn btn-ghost block w-full text-left" %>
         </div>
       </details>
     <% else %>
-      <%= active_link_to t("shared.navigation.login"), new_user_session_path, class_active: "bg-gray-200", class: "btn btn-transparent" %>
-      <%= active_link_to t("shared.navigation.register"), new_user_registration_path, class_active: "bg-gray-200", class: "btn btn-transparent" %>
+      <%= active_link_to t("shared.navigation.login"), new_user_session_path, class_active: "bg-gray-200", class: "btn btn-ghost" %>
+      <%= active_link_to t("shared.navigation.register"), new_user_registration_path, class_active: "bg-gray-200", class: "btn btn-ghost" %>
     <% end %>
   </div>
 </nav>
