--- a/app/views/organizations/_form.html.erb
+++ b/app/views/organizations/_form.html.erb
@@ -4,7 +4,7 @@
   <div class="">
     <%= form.label :name %>
     <%= form.text_field :name,
-                        class: "form-input",
+                        class: "input",
                         autocomplete: "off",
                         autocorrect: "off",
                         autocapitalize: "off",
@@ -15,7 +15,7 @@
 
   <div class="">
     <%= form.label :logo %>
-    <%= form.file_field :logo, accept: "image/png, image/jpeg, image/gif", class: "form-input" %>
+    <%= form.file_field :logo, accept: "image/png, image/jpeg, image/gif", class: "input" %>
   </div>
 
   <div class="inline">
