input, not form-input

--- a/app/views/organizations/memberships/new.html.erb
+++ b/app/views/organizations/memberships/new.html.erb
@@ -8,7 +8,7 @@
       <%= form.label :email %>
       <%= form.email_field :email,
                            placeholder: "hello@superails.com",
-                           class: "form-input",
+                           class: "input",
                            autocomplete: "off",
                            autocorrect: "off",
                            autocapitalize: "off",
