--- a/app/views/organizations/memberships/index.html.erb
+++ b/app/views/organizations/memberships/index.html.erb
@@ -1,5 +1,46 @@
 <% content_for :title, t(".title") %>
 
+<% if policy(@current_membership).update? %>
+  <%= render PageComponent.new(title: t("organizations.show.access_settings.title", )) do %>
+    <%= form_with model: @organization, method: :patch do |form| %>
+      <%= form.label :privacy_setting, t("organizations.show.access_settings.privacy") %>
+      <%= form.select :privacy_setting, Organization.privacy_settings.keys.map { |k| [k.humanize, k] }, {}, { class: "form-input", onchange: "this.form.submit()" } %>
+    <% end %>
+
+    <%= link_to organization_invitations_path(@organization), class: "border p-4 rounded-lg flex items-center justify-between gap-2 hover:bg-gray-100" do %>
+      <div class="flex items-center gap-2">
+        <%= t("organizations.show.access_settings.invitations") %>
+      </div>
+
+      <div class="flex items-center gap-4">
+        <div class="flex items-center -space-x-2">
+          <%= @organization.user_invitations.pending.count %>
+        </div>
+
+        <%= inline_svg_tag "svg/chevron-right.svg", class: "size-5" %>
+      </div>
+    <% end %>
+
+    <% if @organization.privacy_setting_restricted? %>
+      <%= link_to "#", class: "border p-4 rounded-lg flex items-center justify-between gap-2 hover:bg-gray-100" do %>
+        <div class="flex items-center gap-2">
+          <%= t("organizations.show.access_settings.requests_to_join_organization") %>
+        </div>
+
+        <div class="flex items-center gap-4">
+          <div class="flex items-center -space-x-2">
+            <%= @organization.user_requests.pending.count %>
+          </div>
+
+          <%= inline_svg_tag "svg/chevron-right.svg", class: "size-5" %>
+        </div>
+      <% end %>
+    <% end %>
+  <% end %>
+<% end %>
+
+<br>
+
 <%= render PageComponent.new(title: t(".title")) do |component| %>
   <% component.with_action_list do %>
     <%= link_to t("organizations.memberships.new.title"), new_organization_membership_path(@organization), class: "btn btn-primary" if policy(@organization.memberships.new).new? %>
