--- a/app/views/shared/_flash.html.erb
+++ b/app/views/shared/_flash.html.erb
@@ -1,7 +1,7 @@
 <% flash.each do |type, message| %>
   <% if message.is_a?(String) %>
     <%= tag.div message,
-                class: [ "mx-2 mt-2 rounded-xl p-2 shadow opacity-90 cursor-pointer break-normal", flash_style(type) ],
+                class: "du-alert #{flash_style(type)} mx-2 mt-2 opacity-90 cursor-pointer break-normal",
                 data: { 
                   controller: "auto-remove element-remove",
                   auto_remove_delay_value: 2000,
