--- a/app/views/organizations/_form.html.erb
+++ b/app/views/organizations/_form.html.erb
@@ -4,7 +4,7 @@
   <div class="">
     <%= form.label :name %>
     <%= form.text_field :name,
-                        class: "input",
+                        class: "du-input",
                         autocomplete: "off",
                         autocorrect: "off",
                         autocapitalize: "off",
@@ -19,6 +19,6 @@
   </div>
 
   <div class="inline">
-    <%= form.submit class: "btn btn-primary" %>
+    <%= form.submit class: "du-btn du-btn-primary" %>
   </div>
 <% end %>
