--- a/app/views/organizations/transfers/_form.html.erb
+++ b/app/views/organizations/transfers/_form.html.erb
@@ -5,6 +5,6 @@
   </div>
 
   <div class="inline">
-    <%= form.submit class: "btn btn-primary", data: { turbo_confirm: t("shared.actions.confirm") } %>
+    <%= form.submit class: "du-btn du-btn-primary", data: { turbo_confirm: t("shared.actions.confirm") } %>
   </div>
 <% end %>
