--- a/lib/templates/erb/scaffold/show.html.erb.tt
+++ b/lib/templates/erb/scaffold/show.html.erb.tt
@@ -1,6 +1,6 @@
 <%%= render PageComponent.new(title: "<%= human_name %>") do |component| %>
   <%% component.with_action_list do %>
-    <%%= link_to "Edit", edit_<%= singular_table_name %>_path(@<%= singular_table_name %>), class: "btn btn-secondary" if policy(@<%= singular_table_name %>).edit? %>
+    <%%= link_to "Edit", edit_<%= singular_table_name %>_path(@<%= singular_table_name %>), class: "du-btn du-btn-secondary" if policy(@<%= singular_table_name %>).edit? %>
     <div class="inline-block">
       <%%= button_to "Destroy", @<%= singular_table_name %>, method: :delete, data: { turbo_confirm: "Are you sure?" }, class: "btn btn-danger" if policy(@<%= singular_table_name %>).destroy? %>
     </div>
