--- a/app/views/organizations/edit.html.erb
+++ b/app/views/organizations/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render PageComponent.new(title: t("organizations.edit.title"), content_container: true, full_width: false) do |component| %>
   <%= render "form", organization: @organization %>
-  <%= link_to t("shared.actions.cancel"), @organization, class: "btn btn-secondary" %>
+  <%= link_to t("shared.actions.cancel"), @organization, class: "du-btn du-btn-secondary" %>
 <% end %>
