--- a/app/views/organizations/memberships/edit.html.erb
+++ b/app/views/organizations/memberships/edit.html.erb
@@ -17,9 +17,9 @@
     </div>
 
     <div class="inline">
-      <%= form.submit class: "btn btn-primary" %>
+      <%= form.submit class: "du-btn du-btn-primary" %>
     </div>
   <% end %>
 
-  <%= link_to t("shared.actions.cancel"), organization_memberships_path(@organization), class: "btn btn-secondary" %>
+  <%= link_to t("shared.actions.cancel"), organization_memberships_path(@organization), class: "du-btn du-btn-secondary" %>
 <% end %>
