--- a/app/views/organizations/memberships/index.html.erb
+++ b/app/views/organizations/memberships/index.html.erb
@@ -2,7 +2,7 @@
 
 <%= render PageComponent.new(title: t(".title")) do |component| %>
   <% component.with_action_list do %>
-    <%= link_to t("organizations.memberships.new.title"), new_organization_membership_path(@organization), class: "btn btn-primary" if policy(@organization.memberships.new).new? %>
+    <%= link_to t("organizations.memberships.new.title"), new_organization_membership_path(@organization), class: "du-btn du-btn-primary" if policy(@organization.memberships.new).new? %>
   <% end %>
 
   <div id="memberships" class="space-y-4">
