--- a/app/views/organizations/memberships/new.html.erb
+++ b/app/views/organizations/memberships/new.html.erb
@@ -30,9 +30,9 @@
     </div>
 
     <div class="inline">
-      <%= form.submit "Invite", class: "btn btn-primary" %>
+      <%= form.submit "Invite", class: "du-btn du-btn-primary" %>
     </div>
   <% end %>
 
-  <%= link_to t("shared.actions.cancel"), organization_memberships_path(@organization), class: "btn btn-secondary" %>
+  <%= link_to t("shared.actions.cancel"), organization_memberships_path(@organization), class: "du-btn du-btn-secondary" %>
 <% end %>
