--- a/lib/templates/erb/scaffold/_form.html.erb.tt
+++ b/lib/templates/erb/scaffold/_form.html.erb.tt
@@ -22,6 +22,6 @@
 
 <% end -%>
   <div class="inline">
-    <%%= form.submit class: "btn btn-primary" %>
+    <%%= form.submit class: "du-btn du-btn-primary" %>
   </div>
 <%% end %>
