--- a/app/views/shared/_sidebar_2_cols.html.erb
+++ b/app/views/shared/_sidebar_2_cols.html.erb
@@ -1,21 +1,21 @@
 <%# Mobile sidebar backdrop %>
-<div data-mobile-sidebar-target="backdrop" class="lg:hidden fixed inset-0 bg-gray-800/50 z-40 hidden" data-action="click->mobile-sidebar#close"></div>
+<div data-mobile-sidebar-target="backdrop" class="lg:hidden fixed inset-0 bg-base-content/30 z-40 hidden" data-action="click->mobile-sidebar#close"></div>
 
-<aside data-mobile-sidebar-target="sidebar" class="fixed lg:relative border-r bg-gray-100 h-dvh -translate-x-full lg:translate-x-0 transition-transform duration-300 z-50 flex flex-col overflow-y-auto flex-shrink-0">
+<aside data-mobile-sidebar-target="sidebar" class="fixed lg:relative border-r bg-base-200 h-dvh -translate-x-full lg:translate-x-0 transition-transform duration-300 z-50 flex flex-col overflow-y-auto flex-shrink-0">
   <%# Widescreen sidebar top %>
-  <nav class="flex flex-row flex-grow divide-x">
+  <nav class="flex flex-row flex-grow divide-x divide-base-300">
     <div class="flex flex-col max-h-dvh overflow-y-auto p-2">
       <div class="flex flex-col space-y-2">
         <%= link_to root_path, class: "flex items-center justify-center aspect-square" do %>
           <%= image_tag "logo.png", alt: "logo", class: "size-8" %>
         <% end %>
 
-        <%= active_link_to organizations_path, active: :exclusive, title: t("organizations.index.title"), class_active: "bg-gray-200", class: "aspect-square flex justify-center items-center text-sm rounded-md border-4 border-transparent hover:border-gray-200 hover:bg-gray-200" do %>
+        <%= active_link_to organizations_path, active: :exclusive, title: t("organizations.index.title"), class_active: "bg-base-300", class: "aspect-square flex justify-center items-center text-sm rounded-md border-4 border-transparent hover:border-base-300 hover:bg-base-300" do %>
           <%= inline_svg_tag "svg/rocket-launch.svg", class: "size-6" %>
         <% end %>
         <div class="flex flex-col items-center space-y-1">
           <% current_user.organizations.each do |organization| %>
-            <%= active_link_to organization_path(organization, redirect_to: organization_dashboard_path(organization)), title: organization.name, class_active: "bg-red-400", class: "flex items-center space-x-2 text-sm rounded-md border-4 border-transparent hover:border-red-400 hover:bg-red-400" do %>
+            <%= active_link_to organization_path(organization, redirect_to: organization_dashboard_path(organization)), title: organization.name, class_active: "border-primary bg-primary/20 hover:border-primary", class: "flex items-center space-x-2 text-sm rounded-md border-4 border-transparent hover:border-base-300 hover:bg-base-300" do %>
               <%= organization_avatar(organization) %>
             <% end %>
           <% end %>
@@ -29,6 +29,7 @@
     <% if current_organization %>
       <div class="flex flex-col justify-between max-h-dvh overflow-y-auto space-y-1 max-w-min">
         <div class="space-y-1 p-2">
+          <%= nav_link current_organization.name, organization_path(current_organization), icon: organization_avatar(current_organization), active: :exclusive %>
           <%= render "shared/sidebar_links" %>
         </div>
         <div class="border-t space-y-1 p-2">
