--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -24,17 +24,23 @@
 
   <div class="du-navbar-end">
     <% if signed_in? %>
-      <details class="relative group flex items-center" data-controller="dropdown" data-action="keydown.esc@window->dropdown#close">
-        <summary class="inline-flex items-center gap-1 font-medium text-sm cursor-pointer [&::-webkit-details-marker]:hidden">
+      <details class="du-dropdown" data-controller="dropdown" data-action="keydown.esc@window->dropdown#close">
+        <summary class="du-btn du-btn-ghost inline-flex items-center gap-1 font-medium text-sm cursor-pointer [&::-webkit-details-marker]:hidden">
           <%= user_avatar(current_user) %>
           <%= current_user.email %>
           <%= inline_svg_tag "svg/chevron-down.svg", class: "w-4 h-4 stroke-2 transition-transform duration-200 group-open:rotate-180" %>
         </summary>
-        <div class="absolute right-0 mt-5 bg-gray-100 border rounded-lg p-1 space-y-1">
-          <%= active_link_to t("shared.navigation.pending_invitations"), user_invitations_path, class_active: "du-btn-active", class: "du-btn du-btn-ghost du-btn-sm w-full justify-start" %>
-          <%= active_link_to t("shared.navigation.edit_profile"), edit_user_registration_path, class_active: "du-btn-active", class: "du-btn du-btn-ghost du-btn-sm w-full justify-start" %>
-          <%= button_to t("shared.navigation.logout"), destroy_user_session_path, method: :delete, data: { turbo_confirm: t("shared.actions.confirm") }, class: "du-btn du-btn-ghost du-btn-sm w-full justify-start" %>
-        </div>
+        <ul class="du-menu du-dropdown-content">
+          <li>
+            <%= active_link_to t("shared.navigation.pending_invitations"), user_invitations_path, class_active: "du-btn-active", class: "du-btn du-btn-ghost du-btn-sm w-full justify-start" %>
+          </li>
+          <li>
+            <%= active_link_to t("shared.navigation.edit_profile"), edit_user_registration_path, class_active: "du-btn-active", class: "du-btn du-btn-ghost du-btn-sm w-full justify-start" %>
+          </li>
+          <li>
+            <%= button_to t("shared.navigation.logout"), destroy_user_session_path, method: :delete, data: { turbo_confirm: t("shared.actions.confirm") }, class: "du-btn du-btn-ghost du-btn-sm w-full justify-start" %>
+          </li>
+        </ul>
       </details>
     <% else %>
       <%= active_link_to t("shared.navigation.login"), new_user_session_path, class_active: "du-btn-active", class: "du-btn du-btn-ghost" %>
