--- a/app/views/organizations/_form.html.erb
+++ b/app/views/organizations/_form.html.erb
@@ -19,6 +19,6 @@
   </div>
 
   <div class="inline">
-    <%= form.submit class: "btn btn-primary" %>
+    <%= form.submit class: "du-btn du-btn-primary" %>
   </div>
 <% end %>
