--- a/app/views/users/access_request/invite_to_organizations/_invite_to_organization.html.erb
+++ b/app/views/users/access_request/invite_to_organizations/_invite_to_organization.html.erb
@@ -7,8 +7,8 @@
 
   <div class="flex items-center gap-4">
     <div class="flex items-center gap-1">
-      <%= button_to t("invitations.buttons.approve"), approve_user_invitation_path(invitation), method: :post, class: "btn btn-primary" %>
-      <%= button_to t("invitations.buttons.reject"), reject_user_invitation_path(invitation), method: :post, class: "btn btn-danger" %>
+      <%= button_to t("invitations.buttons.approve"), approve_user_invitation_path(invitation), method: :post, class: "du-btn du-btn-primary" %>
+      <%= button_to t("invitations.buttons.reject"), reject_user_invitation_path(invitation), method: :post, class: "du-btn du-btn-error" %>
     </div>
   </div>
 </div>
