--- a/app/assets/tailwind/application.css
+++ b/app/assets/tailwind/application.css
@@ -5,7 +5,7 @@
 @source "../../../app/views/**/*";
 
 @plugin "./daisyui.js" {
-  themes: light --default, dark --prefersdark;
+  themes: cupcake --default, dark --prefersdark;
   prefix: "du-";
 }
 
