--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav class="flex justify-between px-4 py-2 bg-gray-100 border-b">
+<nav class="flex justify-between px-4 py-2 bg-base-200 border-b">
   <div class="flex items-center gap-2">
     <% if signed_in? %>
       <button data-action="click->mobile-sidebar#open" class="lg:hidden cursor-pointer inline-flex items-center gap-2">
@@ -31,7 +31,7 @@
           <%= current_user.email %>
           <%= inline_svg_tag "svg/chevron-down.svg", class: "w-4 h-4 stroke-2 transition-transform duration-200 group-open:rotate-180" %>
         </summary>
-        <div class="absolute right-0 mt-1 bg-gray-100 border rounded-lg p-1 space-y-1">
+        <div class="absolute right-0 mt-1 bg-base-200 border rounded-lg p-1 space-y-1">
           <%= active_link_to t("shared.navigation.pending_invitations"), user_invitations_path, class_active: "du-btn-active", class: "du-btn du-btn-ghost justify-start w-full" %>
           <%= active_link_to t("shared.navigation.edit_profile"), edit_user_registration_path, class_active: "du-btn-active", class: "du-btn du-btn-ghost justify-start w-full" %>
           <%= button_to t("shared.navigation.logout"), destroy_user_session_path, method: :delete, data: { turbo_confirm: t("shared.actions.confirm") }, class: "du-btn du-btn-ghost justify-start w-full" %>
