use more active btn classes

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -18,7 +18,7 @@
       <%= link_to root_path, class: "no-underline" do %>
         <%= image_tag "logo.png", class: "size-8" %>
       <% end %>
-      <%= active_link_to "Pricing", pricing_path, class_active: "bg-gray-200", class: "du-btn du-btn-ghost" %>
+      <%= active_link_to "Pricing", pricing_path, class_active: "du-btn-active", class: "du-btn du-btn-ghost" %>
     <% end %>
   </div>
 
