org avatar dynamic img size

--- a/app/views/shared/_sidebar_2_cols.html.erb
+++ b/app/views/shared/_sidebar_2_cols.html.erb
@@ -29,6 +29,7 @@
     <% if current_organization %>
       <div class="flex flex-col justify-between max-h-dvh overflow-y-auto space-y-1 max-w-min">
         <div class="space-y-1 p-2">
+          <%= nav_link current_organization.name, organization_path(current_organization), icon: organization_avatar(current_organization, classes: "size-5"), active: :exclusive %>
           <%= render "shared/sidebar_links" %>
         </div>
         <div class="border-t space-y-1 p-2">
