--- a/app/views/organizations/access_request/invite_to_organizations/_invite_to_organization.html.erb
+++ b/app/views/organizations/access_request/invite_to_organizations/_invite_to_organization.html.erb
@@ -7,7 +7,7 @@
 
   <div class="flex items-center gap-4">
     <div class="flex items-center gap-1">
-      <%= button_to t("organizations.invitations.buttons.cancel"), organization_invitation_path(invitation.organization, invitation), method: :delete, class: "btn btn-danger" %>
+      <%= button_to t("organizations.invitations.buttons.cancel"), organization_invitation_path(invitation.organization, invitation), method: :delete, class: "du-btn du-btn-error" %>
     </div>
   </div>
 </div>
