--- a/app/views/organizations/memberships/_membership.html.erb
+++ b/app/views/organizations/memberships/_membership.html.erb
@@ -3,7 +3,7 @@
     <div class="">
       <%= membership.user.email %>
     </div>
-    <div class="">
+    <div class="du-badge du-badge-outline du-badge-sm">
       <%= membership.role %>
     </div>
   </div>
