--- a/app/views/shared/_sidebar_2_cols.html.erb
+++ b/app/views/shared/_sidebar_2_cols.html.erb
@@ -41,5 +41,14 @@
         </div>
       </div>
     <% end %>
+
+    <% if controller_path.start_with?('users') %>
+      <div class="flex flex-col justify-between max-h-dvh overflow-y-auto space-y-1 max-w-min">
+        <div class="space-y-1 p-2">
+          <%= nav_link t("shared.navigation.edit_profile"), edit_user_registration_path, icon: "🔐" %>
+          <%= nav_link t("shared.navigation.pending_invitations"), user_invitations_path, icon: current_user.organization_invitations.count.to_s %>
+        </div>
+      </div>
+    <% end %>
   </nav>
 </aside>
