Add discover feature with organizations listing
- Introduced CardComponent for displaying organizations with images and actions.
- Added discoverable scope to the Organization model for filtering based on privacy settings.

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -14,6 +14,8 @@
           </div>
         <% end %>
       </button>
+
+      <%= active_link_to t("shared.navigation.discover"), discover_path, class_active: "du-btn-active", class: "du-btn du-btn-ghost" %>
     <% else %>
       <%= link_to root_path, class: "no-underline" do %>
         <%= image_tag "logo.png", class: "size-8" %>
