--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <%= render "layouts/head" %>
   </head>
 
-  <body class="flex h-dvh" data-controller="mobile-sidebar layout-switcher">
+  <body class="flex h-dvh" data-controller="mobile-sidebar layout-switcher dialog">
     <% if signed_in? %>
       <% sidebar_layout = cookies[:sidebar_layout] || "default" %>
       <% if sidebar_layout == "default" %>
@@ -30,5 +30,6 @@
         <%= render "shared/footer" %>
       <% end %>
     </div>
+    <%= render "shared/dialog" %>
   </body>
 </html>
