--- a/app/views/organizations/projects/index.html.erb
+++ b/app/views/organizations/projects/index.html.erb
@@ -7,7 +7,7 @@
 
   <div class="flex justify-between items-center">
     <h1 class="font-bold text-lx lg:text-3xll">Projects</h1>
-    <%= link_to "New project", new_organization_project_path(@organization), class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium" %>
+    <%= link_to "New project", new_organization_project_path(@organization), data: { turbo_frame: "dialog_content", action: "dialog#open" }, class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium" %>
   </div>
 
   <div id="projects" class="min-w-full">
