--- a/app/views/shared/_dialog.html.erb
+++ b/app/views/shared/_dialog.html.erb
@@ -1,4 +1,4 @@
-<dialog class="m-auto rounded-lg bg-white text-left shadow-xl w-full sm:max-w-lg backdrop:bg-black/5" data-dialog-target="dialog" data-action="click->dialog#backdropClick">
+<dialog class="m-auto rounded-lg bg-white text-left shadow-xl w-full sm:max-w-lg backdrop:bg-black/5" data-dialog-target="dialog" data-action="click->dialog#backdropClick turbo:submit-end->dialog#submitEnd">
   <button type="button" data-action="dialog#close" class="absolute right-4 top-4 p-1 text-gray-400 bg-white rounded-md hover:text-gray-500 hover:bg-gray-100">
     <svg class="w-6 h-6 pointer-events-none" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
       <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12"/>
