--- a/app/views/organizations/memberships/_membership.html.erb
+++ b/app/views/organizations/memberships/_membership.html.erb
@@ -1,9 +1,9 @@
 <div id="<%= dom_id membership %>" class="border p-4 rounded-lg flex justify-between items-center">
   <div class="">
-    <div class="">
+    <div class="font-medium">
       <%= membership.user.email %>
     </div>
-    <div class="du-badge du-badge-outline du-badge-sm">
+    <div class="du-badge du-badge-xs du-badge-soft capitalize">
       <%= membership.role %>
     </div>
   </div>
