--- a/app/views/shared/_errors.html.erb
+++ b/app/views/shared/_errors.html.erb
@@ -1,11 +1,13 @@
 <% if object.errors.any? %>
-  <div id="error_explanation" class="bg-red-50 text-red-500 px-3 py-2 font-medium rounded-lg mt-3">
-    <h2><%= pluralize(object.errors.count, "error") %> prohibited this object from being saved:</h2>
+  <div id="error_explanation" class="du-alert du-alert-error">
+    <div>
+      <h2><%= pluralize(object.errors.count, "error") %> prohibited this object from being saved:</h2>
 
-    <ul>
-      <% object.errors.each do |error| %>
-        <li><%= error.full_message %></li>
-      <% end %>
-    </ul>
+      <ul>
+        <% object.errors.each do |error| %>
+          <li><%= error.full_message %></li>
+        <% end %>
+      </ul>
+    </div>
   </div>
 <% end %>
