--- a/app/views/organizations/projects/new.html.erb
+++ b/app/views/organizations/projects/new.html.erb
@@ -1,5 +1,5 @@
 <div class="mx-auto md:w-2/3 w-full">
-  <%= turbo_frame_tag 'dialog_content' do %>
+  <%= turbo_frame_tag "dialog_content" do %>
     <h1 class="font-bold mb-3">New project</h1>
     <%= render "form", project: @project %>
   <% end %>
