Turbo Modal Example (#240)
* Add dialog stimulus controller

* Add dialog partial and render it in application layout

* Show organizations/projects#new in new dialog

* Refactor form rerendering on validation failure

* Close dialog after successful form submission via turbo:submit-end

* Keep back button for the non-dialog version of projects#new

* Use inline_svg_tag for close button

* Append project record when created sucessfully

* Use daisyUI modal classes

* add turbo-power, use turbo_stream.redirect_to

* try applying modal to organization#new

* use turbo frame on org /new /edit

* Update organizations_controller.rb

* Update organizations_controller.rb

* transfer works via modal

* Update show.html.erb

* more dialogs by default

* project edit modal

* cleanup

---------

Co-authored-by: Yaro Shm <yshmarov@gmail.com>

--- a/app/views/organizations/transfers/show.html.erb
+++ b/app/views/organizations/transfers/show.html.erb
@@ -1,4 +1,5 @@
-<%= render PageComponent.new(title: t(".title"), content_container: true, full_width: false) do |component| %>
-  <%= render "organizations/transfers/form" %>
-  <%= link_to t("shared.actions.cancel"), organization_path(current_organization), class: "du-btn du-btn-secondary" %>
+<%= turbo_frame_tag "dialog_content" do %>
+  <%= render PageComponent.new(title: t(".title"), content_container: false, full_width: false) do |component| %>
+    <%= render "organizations/transfers/form" %>
+  <% end %>
 <% end %>
