--- a/app/views/organizations/projects/_form.html.erb
+++ b/app/views/organizations/projects/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: [ @organization, project ], class: "contents") do |form| %>
+<%= form_with(model: [ @organization, project ], class: "contents space-y-4") do |form| %>
   <% if project.errors.any? %>
     <div id="error_explanation" class="bg-red-50 text-red-500 px-3 py-2 font-medium rounded-lg mt-3">
       <h2><%= pluralize(project.errors.count, "error") %> prohibited this project from being saved:</h2>
