--- a/app/views/organizations/projects/index.html.erb
+++ b/app/views/organizations/projects/index.html.erb
@@ -1,13 +1,9 @@
+<% content_for :title, "Projects" %>
 <div class="w-full">
-  <% if notice.present? %>
-    <p class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-lg inline-block" id="notice"><%= notice %></p>
-  <% end %>
-
-  <% content_for :title, "Projects" %>
 
   <div class="flex justify-between items-center">
     <h1 class="font-bold text-lx lg:text-3xll">Projects</h1>
-    <%= link_to "New project", new_organization_project_path(@organization), class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium" %>
+    <%= link_to "New project", new_organization_project_path(@organization), data: { turbo_frame: "dialog_content", action: "dialog#open" }, class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium" %>
   </div>
 
   <div id="projects" class="min-w-full">
